--- a/style.css
+++ b/style.css
@@ -1,24 +1,64 @@
-header {
-    background-color: #424E61;
-    color: white;
+:root {
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #c0c0c0;
+    --botao-azul: #167bf7;
+    --cor-de-fundo: #00030c;
 }
 
-.cabecalho-imagem{
-
-    width: 20%;
+body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
 }
 
-.cabecalho{
-
-background-color:forestgreen;
-color:black;
-display: flex;
-justify-content: space-around;
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
-.cabecalho-lista-item{
+.container{
+
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+}
+
+.container__botao{
+
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+}
+
+.botao_secundario {
+
+    background-color: transparent;
+    border: 2px solid var(--cinza-secundario);
+} 
+
+.container__aviso{
+
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
+.container__titulo{
+
+    font-size: 28px;
+    font-weight: 700;
+}
+    .secundario { 
+         align-items: center;
+          margin: 0 10em;
+
+  }
+
+.descricao_titulo{  
     
-display: inline-block;
-
 }
-
